[gd_scene load_steps=2 format=2]

[ext_resource path="res://Addons/physics_assets/Ui/Controls/SceneNodePathsPicker/SceneNodePathsPicker.gd" type="Script" id=1]

[node name="VBRootContainer" type="VBoxContainer"]
margin_right = 194.0
margin_bottom = 197.0
script = ExtResource( 1 )

[node name="HBPageContainer" type="HBoxContainer" parent="."]
margin_right = 194.0
margin_bottom = 24.0

[node name="LblPage" type="Label" parent="HBPageContainer"]
margin_top = 5.0
margin_right = 116.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Page:"

[node name="SbPage" type="SpinBox" parent="HBPageContainer"]
unique_name_in_owner = true
margin_left = 120.0
margin_right = 194.0
margin_bottom = 24.0

[node name="HBSizeContainer" type="HBoxContainer" parent="."]
margin_top = 28.0
margin_right = 194.0
margin_bottom = 52.0

[node name="LblSize" type="Label" parent="HBSizeContainer"]
margin_top = 5.0
margin_right = 116.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Size:"

[node name="SbSize" type="SpinBox" parent="HBSizeContainer"]
unique_name_in_owner = true
margin_left = 120.0
margin_right = 194.0
margin_bottom = 24.0

[node name="VBItemsList" type="VBoxContainer" parent="."]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 194.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
